# concordo

./: .gitignore  CMakeLists.txt  README.md
data/: script_comandos2.txt
include/: canaltexto.h  mensagem.h  servidor.h  sistema.h  usuario.h
src/: canaltexto.cpp  mensagem.cpp  servidor.cpp  sistema.cpp  usuario.cpp
